# ToolUniverse

./: .pre-commit-config.yaml  README.md  pyproject.toml  server.json  setup_precommit.sh
.githooks/: pre-commit-docs  pre-commit-skills
.github/workflows/: publish-mcp-registry.yml
docs/: FULLTEXT_ACCESS_GUIDE.md  MCP_TASKS_GUIDE.md  SEARCHING_BIORXIV.md  TEST_WRITING_GUIDE.md  conf.py  faq.rst  getting_started.rst  index.rst  quickstart.rst  sitemap.rst
docs/about/: contributing.rst  faq.rst  index.rst
docs/expand_tooluniverse/: architecture.rst  async_tools_guide.rst  index.rst  quick_start.rst
docs/guide/: agentic_tools_tutorial.rst  api_keys.rst  clinical_guidelines_tools.rst  compact_mode.rst  examples.rst  expert_feedback.md  finding_tools.rst  http_api.rst  index.rst  interaction_protocol.rst  literature_search_tools_tutorial.rst  literature_search_web_ui_tutorial.rst  loading_tools.rst  logging.rst  make_your_data_agent_searchable.rst  mcpb_introduction.rst  python_guide.rst  scientific_workflows.rst  skills_showcase.rst  tool_caller.rst  tool_composition.rst  tools.rst  toolspace.rst  tu_cli.rst  vllm_support.rst
docs/help/: faq.rst  troubleshooting.rst
docs/reference/: cli_tools.rst  environment_variables.rst  glossary.rst
docs/tutorials/: finding_tools.rst
examples/: arrayexpress_biostudies_demo.py  biomodels_demo.py  core_tools_demo.py
examples/code_executor/: configurable_script.py  data_processor.py  hello_world.py
examples/compact_mode/: README.md  stdio_wrapper.py
scripts/: test_new_tools.py
skills/: README.md
skills/devtu-create-tool/: README.md
skills/devtu-docs-quality/: SKILL.md
skills/devtu-github/: SKILL.md
skills/devtu-optimize-skills/: SKILL.md
skills/devtu-self-evolve/: SKILL.md
skills/evals/: evals.json
skills/setup-tooluniverse/: SKILL.md
skills/tooluniverse-acmg-variant-classification/: SKILL.md
skills/tooluniverse-admet-prediction/: SKILL.md
skills/tooluniverse-adverse-event-detection/: SKILL.md
skills/tooluniverse-aging-senescence/: SKILL.md
skills/tooluniverse-antibody-engineering/: EXAMPLES.md  QUICK_START.md  SKILL.md  WORKFLOW_DETAILS.md
skills/tooluniverse-binder-discovery/: SKILL.md
skills/tooluniverse-cancer-classification/: SKILL.md
skills/tooluniverse-cancer-genomics-tcga/: SKILL.md
skills/tooluniverse-cancer-variant-interpretation/: SKILL.md
skills/tooluniverse-cell-line-profiling/: SKILL.md
skills/tooluniverse-chemical-compound-retrieval/: SKILL.md
skills/tooluniverse-chemical-safety/: SKILL.md
skills/tooluniverse-chemical-sourcing/: SKILL.md
skills/tooluniverse-clinical-data-integration/: SKILL.md
skills/tooluniverse-clinical-guidelines/: SKILL.md
skills/tooluniverse-clinical-trial-design/: SKILL.md  STUDY_DESIGN_PROCEDURES.md
skills/tooluniverse-clinical-trial-matching/: SKILL.md
skills/tooluniverse-comparative-genomics/: SKILL.md
skills/tooluniverse-computational-biophysics/: SKILL.md
skills/tooluniverse-crispr-screen-analysis/: ANALYSIS_DETAILS.md  SKILL.md
skills/tooluniverse-custom-tool/: SKILL.md
skills/tooluniverse-data-integration-analysis/: SKILL.md
skills/tooluniverse-data-wrangling/: SKILL.md
skills/tooluniverse-dataset-discovery/: SKILL.md
skills/tooluniverse-disease-research/: SKILL.md  TOOLS_REFERENCE.md  tool_usage_details.md
skills/tooluniverse-drug-drug-interaction/: SKILL.md
skills/tooluniverse-drug-mechanism-research/: SKILL.md
skills/tooluniverse-drug-regulatory/: SKILL.md
skills/tooluniverse-drug-repurposing/: EXAMPLES.md  README.md  REFERENCE.md  SKILL.md
skills/tooluniverse-drug-research/: CHECKLIST.md  EXAMPLES.md  REPORT_TEMPLATE.md  SKILL.md  TOOLS_REFERENCE.md
skills/tooluniverse-drug-target-validation/: SKILL.md
skills/tooluniverse-ecology-biodiversity/: SKILL.md
skills/tooluniverse-electron-microscopy/: SKILL.md
skills/tooluniverse-epidemiological-analysis/: SKILL.md
skills/tooluniverse-epigenomics/: SKILL.md
skills/tooluniverse-epigenomics-chromatin/: SKILL.md
skills/tooluniverse-expression-data-retrieval/: SKILL.md  examples.md
skills/tooluniverse-functional-genomics-screens/: SKILL.md
skills/tooluniverse-gene-disease-association/: SKILL.md
skills/tooluniverse-gene-enrichment/: SKILL.md
skills/tooluniverse-gene-regulatory-networks/: SKILL.md
skills/tooluniverse-gpcr-structural-pharmacology/: SKILL.md
skills/tooluniverse-gwas-drug-discovery/: SKILL.md
skills/tooluniverse-gwas-finemapping/: SKILL.md
skills/tooluniverse-gwas-snp-interpretation/: SKILL.md
skills/tooluniverse-gwas-study-explorer/: SKILL.md
skills/tooluniverse-gwas-trait-to-gene/: SKILL.md
skills/tooluniverse-hla-immunogenomics/: SKILL.md
skills/tooluniverse-image-analysis/: SKILL.md
skills/tooluniverse-immune-repertoire-analysis/: SKILL.md
skills/tooluniverse-immunology/: SKILL.md
skills/tooluniverse-infectious-disease/: SKILL.md  (+1 more)
skills_dev/: .gitignore  README.md
src/: .env.template
tests/: test_data_quality_tool.py  test_meta_analysis_tool.py  test_scientific_calculator_tools.py
(+1436 files in other folders)
